# educasort

./: .gitignore  .travis.yml  README.md  meson.build
app/algo_style/: algo_style.c  meson.build
app/dump_dot_expr/: dump_dot_expr.c  meson.build
coding-style/: clang-format  format.sh
coding_style/: clang-format
doc/: conf.py  grammar.rst  index.rst
include/educasort/: unit-test.h  utils.h
include/educasort/lexer/: lexer.h  token.h
include/educasort/parser/: ast.h  parser.h
include/educasort/utils/: convert.h  dot.h  file.h  string.h
include/educasort/visitor/: style.h  visitor.h
src/lexer/: internal.h  lexer.c  meson.build  token.c
src/parser/: ast.c  internal.h  meson.build  node.h  parser.c  parser_declaration.c  parser_expr.c  parser_vardec.c  token.h
src/utils/: convert.c  dot.c  file.c  internal.h  meson.build  string.c
src/visitor/: meson.build  style.c  visitor.c
tools/scripts/: color.sh  utils.sh
unit-tests/lexer/: lexer.cc  meson.build
unit-tests/parser/: meson.build  parser.cc
unit-tests/utils/: dot.cc  file.cc  main.cc  meson.build  string.cc  test.txt
unit-tests/visitor/: meson.build  visitor.cc
